--- a/SmartContactManager/src/main/resources/application.properties
+++ b/SmartContactManager/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=Virinchi@123
 
 #server.servlet.session.timeout= 120s
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=
 #multipart config
